--- a/GrimorioApp/src/app/components/layout/pages/sets/sets.html
+++ b/GrimorioApp/src/app/components/layout/pages/sets/sets.html
@@ -58,8 +58,10 @@
 					</mat-chip>
 					<mat-chip>Id: {{ s.idSet }}</mat-chip>
 					<mat-chip>Código: {{ s.codigo }}</mat-chip>
+					<mat-chip>Cartas: {{ s.numCartas }}</mat-chip>
 				</mat-chip-set>
 			</mat-card-content>
+
 
 			<mat-card-actions align="end" class="card-actions">
 
