--- a/GrimorioApp/src/styles.css
+++ b/GrimorioApp/src/styles.css
@@ -1,11 +1,21 @@
 /* You can add global styles to this file, and also import other style files */
 
-
-
-html, body { height: 100%; margin: 0; }
-body {  font-family: Roboto, "Helvetica Neue", sans-serif; }
-app-root { min-height: 100vh; display: flex; flex-direction: column; }
-mat-sidenav-container { flex: 1 1 auto; }
+html,
+body {
+  height: 100%;
+  margin: 0;
+}
+body {
+  font-family: Roboto, 'Helvetica Neue', sans-serif;
+}
+app-root {
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+}
+mat-sidenav-container {
+  flex: 1 1 auto;
+}
 
 .mat-mdc-dialog-content {
   padding-top: 1em !important;
@@ -13,7 +23,7 @@ mat-sidenav-container { flex: 1 1 auto; }
 
 /* Botón rojo */
 .btn-rojo {
-  background-color: #d32f2f !important;  /* rojo Material-ish */
+  background-color: #d32f2f !important; /* rojo Material-ish */
   color: white !important;
 }
 .btn-rojo:hover {
@@ -38,7 +48,9 @@ mat-sidenav-container { flex: 1 1 auto; }
   background-color: #0d47a1 !important;
 }
 
-.btn-rojo, .btn-verde, .btn-azul {
+.btn-rojo,
+.btn-verde,
+.btn-azul {
   border-radius: 6px;
   font-weight: 500;
   text-transform: none;
