--- a/GrimorioApp/src/app/components/layout/pages/sets/sets.css
+++ b/GrimorioApp/src/app/components/layout/pages/sets/sets.css
@@ -7,7 +7,7 @@
 .header {
   display: flex;
   justify-content: space-between;
-  align-items: flex-end;
+  align-items: center;
   margin-bottom: 24px;
   flex-wrap: wrap;
   gap: 16px;
@@ -47,7 +47,6 @@
   gap: 16px;
   grid-template-columns: repeat(auto-fill, minmax(390px, 1fr));
 }
-
 
 /* --- Tarjetas estilo sobre --- */
 .set-card {
@@ -95,9 +94,8 @@
 .card-actions {
   display: flex;
   justify-content: space-between;
-  padding: 16px
+  padding: 16px;
 }
-
 
 .card-actions button mat-icon {
   margin-right: 6px;
