--- a/GrimorioApp/src/styles.css
+++ b/GrimorioApp/src/styles.css
@@ -55,3 +55,30 @@ mat-sidenav-container {
   font-weight: 500;
   text-transform: none;
 }
+
+.mat-mdc-dialog-title {
+  background: #3f51b5;
+  color: white !important;
+  border-radius: 0px;
+}
+
+.mdc-button {
+  border-radius: 8px !important;
+}
+
+.mat-mdc-form-field-subscript-wrapper {
+  display: none !important;
+}
+
+.filters {
+  display: flex;
+  gap: 12px;
+  align-items: center;
+  justify-content: flex-end;
+  margin: 2em 0;
+}
+
+.filters > button {
+  height: 2.8em;
+  font-size: 1.5em;
+}
