--- a/GrimorioApp/src/app/components/layout/pages/sets/sets.html
+++ b/GrimorioApp/src/app/components/layout/pages/sets/sets.html
@@ -22,6 +22,10 @@
 				</button>
 			</mat-form-field>
 
+			<button mat-flat-button color="primary" (click)="Catalogo()">
+				<mat-icon>add</mat-icon>
+				Importar desde catalogo
+			</button>
 			<!-- Botón crear -->
 			<button mat-flat-button color="primary" (click)="Crear()">
 				<mat-icon>add</mat-icon>
