--- a/GrimorioApp/src/app/components/layout/pages/carta/carta.html
+++ b/GrimorioApp/src/app/components/layout/pages/carta/carta.html
@@ -53,10 +53,10 @@
 				<mat-label>Rareza</mat-label>
 				<mat-select formControlName="rareza">
 					<mat-option value="">(sin especificar)</mat-option>
-					<mat-option value="Common">Common</mat-option>
-					<mat-option value="Uncommon">Uncommon</mat-option>
-					<mat-option value="Rare">Rare</mat-option>
-					<mat-option value="Mythic">Mythic</mat-option>
+					<mat-option value="common">Common</mat-option>
+					<mat-option value="uncommon">Uncommon</mat-option>
+					<mat-option value="rare">Rare</mat-option>
+					<mat-option value="mythic">Mythic</mat-option>
 				</mat-select>
 			</mat-form-field>
 
